--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -12,22 +12,28 @@
         <local:MainWindowViewModel />
     </Window.DataContext>
     
-    <Grid ShowGridLines="True">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid VerticalAlignment="Center" Grid.Row="0" Grid.Column="0">
+        <Grid Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Background="#303040">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+
             <Grid.ColumnDefinitions>
+                <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Command="{Binding NotImplemented}">New</Button>
-            <Button Grid.Column="1" Command="{Binding NotImplemented}">Import Level</Button>
-            <Button Grid.Column="2" Command="{Binding OnSave}" Height="50">Export level</Button>
+            <Button Grid.Row="0" Grid.Column="0" Command="{Binding NotImplementedCommand}">New</Button>
+            <Button Grid.Row="0" Grid.Column="1" Command="{Binding NotImplementedCommand}">Import Level</Button>
+            <Button Grid.Row="0" Grid.Column="2" Command="{Binding SaveCommand}">Export level</Button>
+            <Button Grid.Row="0" Grid.Column="3" Command="{Binding EditCommand}">Edit Level Properites</Button>
         </Grid>
 
         <Grid Grid.Row="1" Background="#303040">
