--- a/TileEditor/TileSelectorView.xaml
+++ b/TileEditor/TileSelectorView.xaml
@@ -32,6 +32,7 @@
     </UserControl.Resources>
 
     <ListBox ItemsSource="{Binding Data}"
+             x:Name="listbox"
              Background="#303040"
              SelectedItem="{Binding Selected}"
              ItemTemplateSelector="{StaticResource tileSelector}"
