--- a/TileEditor/EditLevelPropertiesWindow.xaml
+++ b/TileEditor/EditLevelPropertiesWindow.xaml
@@ -5,8 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TileEditor"
         mc:Ignorable="d"
-        Title="EditLevelPropertiesWindow" Height="450" Width="800">
-    <Grid>
-        <Label>Hello!</Label>
-    </Grid>
+        Title="Level Properties">
+
+    <Window.Resources>
+        <Style TargetType="local:EditLevelPropertiesWindow">
+            <Setter Property="Background" Value="#303040" />
+            <Setter Property="SizeToContent" Value="Height" />
+            <Setter Property="ResizeMode" Value="NoResize" />
+            <Setter Property="Width" Value="600" />
+        </Style>
+
+        <Style TargetType="Grid">
+            <Setter Property="Margin" Value="4" />
+
+            <Style.Resources>
+                <Style TargetType="Label">
+                    <Setter Property="FontSize" Value="16" />
+                    <Setter Property="Foreground" Value="White" />
+                </Style>
+
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="0,0,0,10" />
+                    <Setter Property="Height" Value="32" />
+                    <Setter Property="FontSize" Value="16" />
+                    <Setter Property="VerticalContentAlignment" Value="Center" />
+                    <Setter Property="Background" Value="#303040" />
+                    <Setter Property="Foreground" Value="White" />
+                </Style>
+
+                <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="Button">
+                    <Setter Property="Margin" Value="5,0,0,10" />
+                    <Setter Property="Height" Value="32" />
+                </Style>
+            </Style.Resources>
+        </Style>
+    </Window.Resources>
+
+    <StackPanel VerticalAlignment="Center">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="50" />
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+
+            <Label Grid.Row="0" Grid.Column="0">Level name</Label>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding LevelProperties.Name}"></TextBox>
+
+            <Label Grid.Row="1" Grid.Column="0">Next Level</Label>
+            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding LevelProperties.NextLevel}"></TextBox>
+            <Button Grid.Row="1" Grid.Column="2" Command="{Binding PickNextLevelCommand}">...</Button>
+
+            <Label Grid.Row="2" Grid.Column="0">Background</Label>
+            <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding LevelProperties.BackgroundPath}"></TextBox>
+            <Button Grid.Row="2" Grid.Column="2" Command="{Binding PickBackgroundCommand}">...</Button>
+
+            <Label Grid.Row="3" Grid.Column="0">Music</Label>
+            <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding LevelProperties.MusicPath}"></TextBox>
+            <Button Grid.Row="3" Grid.Column="2" Command="{Binding PickMusicCommand}">...</Button>
+        </Grid>
+    </StackPanel>
+
 </Window>
