--- a/TileEditor/LayerEditor.xaml
+++ b/TileEditor/LayerEditor.xaml
@@ -7,6 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
+    <!-- TODO: scrollbar style -->
+    <!-- TODO: global scrollbar style -->
+    
     <UserControl.Resources>
         <ResourceDictionary>
             <DataTemplate x:Key="Empty">
