--- a/TileEditor/LeftSidebar.xaml
+++ b/TileEditor/LeftSidebar.xaml
@@ -5,14 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TileEditor"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="350">
+
+    <UserControl.Resources>
+        <Style TargetType="TabControl">
+            <Setter Property="Background" Value="#303040" />
+            <Setter Property="BorderThickness" Value="0" />
+        </Style>
+        <Style TargetType="TabItem">
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="TabItem">
+                        <Grid x:Name="mouseOverGrid">
+                            <Border x:Name="itemBorder" Padding="10 5 10 5" Height="25" VerticalAlignment="Bottom" HorizontalAlignment="Center" Background="#303040" BorderBrush="White" BorderThickness="1">
+                                <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" ContentSource="Header"/>
+                            </Border>
+                        </Grid>
+
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter TargetName="itemBorder" Property="Height" Value="27" />
+                                <Setter TargetName="itemBorder" Property="Background" Value="#606080" />
+                            </Trigger>
+
+                            <Trigger SourceName="mouseOverGrid" Property="IsMouseOver" Value="True">
+                                <Setter TargetName="itemBorder" Property="Background" Value="#4D4D66" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                        
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TabControl Background="#303040" BorderThickness="0" SelectedIndex="{Binding TabIndex}">
+        <TabControl SelectedIndex="{Binding TabIndex}">
             <TabItem Header="Tiles">
                 <local:TileSelectorView/>
             </TabItem>
