--- a/TileEditor/LeftSidebar.xaml
+++ b/TileEditor/LeftSidebar.xaml
@@ -26,7 +26,7 @@
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsSelected" Value="True">
                                 <Setter TargetName="itemBorder" Property="Height" Value="27" />
-                                <Setter TargetName="itemBorder" Property="Background" Value="#606080" />
+                                <Setter TargetName="itemBorder" Property="Background" Value="#4D4D66" />
                             </Trigger>
 
                             <Trigger SourceName="mouseOverGrid" Property="IsMouseOver" Value="True">
