--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -28,12 +28,14 @@
                 <ColumnDefinition />
                 <ColumnDefinition />
                 <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
             <Button Grid.Row="0" Grid.Column="0" Command="{Binding NotImplementedCommand}">New</Button>
             <Button Grid.Row="0" Grid.Column="1" Command="{Binding NotImplementedCommand}">Import Level</Button>
             <Button Grid.Row="0" Grid.Column="2" Command="{Binding SaveCommand}">Export level</Button>
             <Button Grid.Row="0" Grid.Column="3" Command="{Binding EditCommand}">Edit Level Properites</Button>
+            <Button Grid.Row="0" Grid.Column="4" Command="{Binding ResizeLayerCommand}">Resize layer</Button>
         </Grid>
 
         <Grid Grid.Row="1" Background="#303040">
