--- a/TileEditor/App.xaml
+++ b/TileEditor/App.xaml
@@ -5,6 +5,18 @@
              StartupUri="MainWindow.xaml">
 
     <Application.Resources>
+        <Style TargetType="Label">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Background" Value="#303040" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+        
         <Style TargetType="Button">
             <Setter Property="Background" Value="#303040" />
             <Setter Property="Foreground" Value="White" />
@@ -24,6 +36,10 @@
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
                     <Setter Property="Background" Value="#4D4D66" />
+                </Trigger>
+
+                <Trigger Property="IsEnabled" Value="False">
+                    <Setter Property="Background" Value="#747499" />
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -159,7 +175,7 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate>
-                        <Border Background="{TemplateBinding Background}" BorderBrush="White" BorderThickness="0.8"></Border>
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Transparent" BorderThickness="0.0"></Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
