--- a/TileEditor/MainWindow.xaml
+++ b/TileEditor/MainWindow.xaml
@@ -35,7 +35,7 @@
             <Button Grid.Row="0" Grid.Column="1" Command="{Binding NotImplementedCommand}">Import Level</Button>
             <Button Grid.Row="0" Grid.Column="2" Command="{Binding SaveCommand}">Export level</Button>
             <Button Grid.Row="0" Grid.Column="3" Command="{Binding EditCommand}">Edit Level Properites</Button>
-            <Button Grid.Row="0" Grid.Column="4" Command="{Binding ResizeLayerCommand}">Resize layer</Button>
+            <Button Grid.Row="0" Grid.Column="4" Command="{Binding OpenResizeLayerWindowCommand}">Resize layer</Button>
         </Grid>
 
         <Grid Grid.Row="1" Background="#303040">
@@ -56,7 +56,7 @@
             <GridSplitter Background="#4D4D66" HorizontalAlignment="Stretch" Width="5" Grid.Row="1" Grid.Column="3" />
 
             <Border Grid.Column="4" Background="Blue">
-                <TextBlock>Right</TextBlock>
+                <Label>Right</Label>
             </Border>
         </Grid>
 
