--- a/TileEditor/EditorMessageBox.xaml
+++ b/TileEditor/EditorMessageBox.xaml
@@ -3,16 +3,98 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TileEditor"
+        xmlns:local="clr-namespace:TileEditor" xmlns:shell="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         mc:Ignorable="d"
         WindowStartupLocation="CenterOwner">
 
+    <WindowChrome.WindowChrome>
+        <shell:WindowChrome CaptionHeight="36" GlassFrameThickness="0"/>
+    </WindowChrome.WindowChrome>
+
     <Window.Resources>
+        <Style x:Key="closeButton" TargetType="Button" BasedOn="{StaticResource {x:Type Button}}">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Red" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        
         <Style TargetType="local:EditorMessageBox">
             <Setter Property="Background" Value="#303040" />
             <Setter Property="SizeToContent" Value="Height" />
             <Setter Property="ResizeMode" Value="NoResize" />
             <Setter Property="Width" Value="500" />
+
+            <Setter Property="WindowChrome.WindowChrome">
+                <Setter.Value>
+                    <WindowChrome />
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="local:EditorMessageBox">
+                        <Grid Background="#303040">
+
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="36" />
+                                <RowDefinition Height="auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+
+                            <!-- Title bar -->
+                            <Grid Grid.Row="0" Background="#4D4D66" Panel.ZIndex="1">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Border Grid.Column="0" Background="Transparent" Height="36" Width="36" />
+
+                                <!-- Title -->
+                                <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                    <TextBlock FontSize="16" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Title}"   
+                                            VerticalAlignment="Top" HorizontalAlignment="Left"
+                                            Margin="4,0,0,0"/>
+                                </StackPanel>
+
+                                <!-- Buttons -->
+                                <StackPanel
+                                            WindowChrome.IsHitTestVisibleInChrome="True" 
+                                            Grid.Column="2" Orientation="Horizontal">
+
+                                    <Border Width="36" Height="36" Padding="5">
+                                        <Button Style="{StaticResource closeButton}" Click="Close_Click">X</Button>
+                                    </Border>
+                                </StackPanel>
+
+                            </Grid>
+
+                            <Separator Grid.Row="1" />
+
+                            <!-- Content -->
+                            <Border Grid.Row="2" Background="#303040">
+                                <ContentPresenter Content="{TemplateBinding Content}" />
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="CloseButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Grid Width="50" Height="50">
+                            <Border Width="50" Height="50"></Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Content" Value="&#xE106;"/>
         </Style>
     </Window.Resources>
 
